# info-vault

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.service.yml  docker-compose.yml  pyproject.toml  ui.py
.github/workflows/: docker-build.yaml  pipeline.yaml
dp/: __main__.py  schemas.py  settings.py  types.py  utils.py  worker.py
dp/api/: app.py  endpoints.py  schemas.py
dp/database/: __init__.py  alembic.ini  config.py  models.py
dp/database/alembic/: __init__.py  env.py
dp/database/alembic/versions/: 027818e6de5f_initial.py  538a2327e5b2_initial.py  9be5ca4244ac_initial.py  b946cb76a140_initial.py
dp/services/: logger.py  storage.py
dp/storage/: ocr_service.py
dune/: __init__.py  __main__.py  schemas.py  settings.py  worker.py
dune/api/: __init__.py  app.py  chat_router.py  doc_router.py  google_oauth.py  gpt_router.py  helpers.py  ollama_router.py  schemas.py  users.py
dune/api/routers/: chat.py  docs.py
dune/database/: __init__.py  chat_history_wrapper.py  config.py  helpers.py  models.py
dune/database/alembic/: env.py
dune/database/alembic/versions/: 1bb690ce6f6a_initial.py  5315199bf653_init.py  96e23d0ebb3d_vectors.py  b946cb76a140_initial.py  f632bcf30e9e_initial.py
dune/google/: drive.py  gmail.py  helpers.py  settings.py
dune/gpt/: helpers.py  settings.py  stream.py
dune/ollama/: helpers.py  settings.py
duneui/: package-lock.json  package.json  vite.config.ts
duneui/src/: App.css  App.tsx
duneui/src/components/: Chat.tsx  Documents.tsx  Header.tsx  Home.tsx  LoginForm.tsx  helpers.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  auth.tsx  axios.tsx
frontend/src/components/: Chat.tsx  LoginForm.tsx
