[project]
name = "document-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.6",
    "psycopg>=3.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "greenlet>=3.1.1",
    "python-multipart>=0.0.20",
    "minio>=7.2.15",
    "python-doctr[torch,viz,html,contib]>=0.10.0",
    "redis>=5.2.1",
    "pgvector>=0.3.6",
    "openai>=1.63.0",
]
