[project]
name = "dune"
version = "0.1.0"
description = "Document parsing rag system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.6",
    "psycopg>=3.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "greenlet>=3.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "openai>=1.63.0",
    "langchain-core>=0.3.37",
    "langchain-openai>=0.3.6",
    "langchain-postgres>=0.0.13",
    "aioboto3>=13.4.0",
    "langchain-community>=0.3.18",
    "pypdf>=5.3.0",
    "pillow>=11.1.0",
    "rapidocr-onnxruntime>=1.4.4",
    "langchain-ollama>=0.2.3",
    "unstructured[all-docs]>=0.14.8",
    "streamlit>=1.42.2",
    "nltk>=3.9.1",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.162.0",
    "fastapi-users[sqlalchemy,oauth]>=14.0.1",
    "sqlalchemy>=2.0.38",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "types-aioboto3[s3]>=13.4.0",
    "coverage>=7.8.0",
    "locust>=2.33.2",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.3",
]
